# python-template-2023

./: .coveragerc  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci.yml
src/example_package/: example.py
tests/: example_test.py
