[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package"
version = "0.0.1"
authors = [
{ name="jonas wechsler", email="jonaswechsler@gmail.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
]

[project.urls]
"homepage" = "https://github.com/JonasWechsler/python-template-2023"
"bug tracker" = "https://github.com/JonasWechsler/python-template-2023/issues"

# formatting
[tool.black]
line-length = 100
target-version = ['py38']

# linting
[tool.pylint."messages control"]
ignore = []
disable = "all"
enable = [
	"empty-docstring",
	"missing-class-docstring",
	"missing-function-docstring",
	"missing-module-docstring"
]

[tool.isort]
profile = "black"
